set fixed width to table content to make the scrollbar visible

--- a/ui/src/js/backOffice/cartManager/cartOverview.less
+++ b/ui/src/js/backOffice/cartManager/cartOverview.less
@@ -15,10 +15,10 @@
     .glyphicon-remove {
       font-size: 22px;
     }
-    .glyphicon-ok{
+    .glyphicon-ok {
       color: #82ab1f!important;
     }
-    .glyphicon-remove{
+    .glyphicon-remove {
       color: red!important;
     }
   }
@@ -53,6 +53,10 @@
       border-width: 1px;
       padding: 5px;
     }
+    .react-grid-Canvas {
+      width: 1110px!important;
+    }
+
     .react-grid-Cell {
       border-style: none solid none none;
       border-width: 1px;
