--- a/ui/src/js/backOffice/userManager/userOverview.less
+++ b/ui/src/js/backOffice/userManager/userOverview.less
@@ -69,6 +69,11 @@
       border-width: 1px;
       padding: 5px;
     }
+
+    .react-grid-Canvas {
+      width: 1110px!important;
+    }
+    
     .react-grid-HeaderCell:nth-child(2),
     .react-grid-HeaderCell:nth-child(4) {
       border-style: none;
